# telegram-socks-ws-proxy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
docs/: architecture.md
src/: config.rs  main.rs
src/modules/: health.rs  mod.rs  pool.rs  relay.rs  routing.rs  socks.rs  stats.rs  telegram.rs  ws.rs
src/modules/routing/: backoff.rs  ipv6_cache.rs
src/modules/telegram/: catalog.rs  init.rs  splitter.rs
src/runtime/: listen.rs  mod.rs  server.rs  shutdown.rs
