[package]
name = "tg-ws-proxy-rs"
version = "0.1.1"
edition = "2021"
description = "SOCKS5 proxy for Telegram that routes MTProto traffic through Telegram WebSocket endpoints"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.1", features = ["fmt", "env-filter"] }
bytes = "1"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
once_cell = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
webpki-roots = "1"
base64 = "0.22"
getrandom = "0.2"

[profile.release]
lto = false
